# drf-template

./: Makefile  README.md  cokiecutter.json  cookiecutter.json  docker-compose.prod.yaml  pyproject.toml
src/core/: .envExample  urls.py
src/core/settings/: base.py
{{cookiecutter.repo_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml  requirements.txt
{{cookiecutter.repo_name}}/src/core/: .envExample  urls.py
{{cookiecutter.repo_name}}/src/core/settings/: base.py
{{cookiecutter.repo_name}}/src/core/settings/thrid_party/: __init__.py  drf.py  swagger.py
