[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Bol4onok <95026332+MihailGulkin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
python-dotenv = "^0.21.1"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.5"
drf-spectacular = "^0.25.1"
model-bakery = "^1.10.1"
cookiecutter = "^2.1.1"
pre-commit = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
